<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="@dimen/margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Website_xk"
        android:textColor="@color/grew"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/web" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@color/grew"
        android:layout_above="@+id/web"
        android:layout_alignParentStart="true"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:layout_weight="1"
            android:src="@drawable/renren" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:layout_weight="1"
            android:src="@drawable/xinlang" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:layout_weight="1"
            android:src="@drawable/qq" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="8dp"
        android:text="@string/newOne"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/bt_login"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/denglu"
        android:layout_above="@+id/tv_signUp"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_toStartOf="@id/bt_login"
        android:layout_above="@id/tv_signUp"
        android:layout_alignTop="@id/bt_login"
        android:layout_marginEnd="@dimen/padding">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/et_bg"
            android:digits="@string/allowInput"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_marginBottom="@dimen/padding"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/et_bg"
            android:digits="@string/allowInput"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_above="@id/bt_login" />

</RelativeLayout>